--- a/html/StudentHomePage.html
+++ b/html/StudentHomePage.html
@@ -82,10 +82,10 @@
   <div class="sidebar">
     <h2>Student Panel</h2>
     <div class="nav-link" onclick="showSection('dashboard')">Dashboard</div>
-    <div class="nav-link" onclick="window.location.href='http://localhost/SRP/studentMarks.php'">View Results</div>
-    <div class="nav-link" onclick="window.location.href='http://localhost/SRP/classMarks.php'">Class Performance</div>
+    <div class="nav-link" onclick="window.location.href='https://localhost/student-result-management-system/php/studentMarks.php'">View Results</div>
+    <div class="nav-link" onclick="window.location.href='https://localhost/student-result-management-system/php/classMarks.php'">Class Performance</div>
     <div class="nav-link" onclick="showSection('papers')">Question Papers</div>
-    <div class="nav-link" onclick="window.location.href = 'LoginPage.html'">Logout</div>
+    <div class="nav-link" onclick="window.location.href = '../index.html'">Logout</div>
   </div>
 
   <!-- Main Content -->
